# ClairMeta

./: .codeclimate.yml  .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTORS  LICENSE  MANIFEST.IN  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/scripts/linux/apt/: install_test_env.sh
.github/scripts/macos/: install_test_env.sh
.github/scripts/windows/: install_test_env.sh
.github/workflows/: publish-to-pypi.yml  ruff.yml  test-package.yml
.travis/: Dockerfile-build-artful  Dockerfile-build-bionic  Dockerfile-build-trusty  Dockerfile-build-xenial  Dockerfile-install-artful  Dockerfile-install-bionic  Dockerfile-install-trusty  Dockerfile-install-xenial  bintray.sh  build_deb.sh  build_env.sh  stdeb-python3.cfg
.travis/debian-asdcplib/: asdcplib.install  changelog  copyright  rules
clairmeta/: __init__.py  check_isdcf.py  check_sequence.py  cli.py  dcdm.py  dcp.py  dcp_check.py  dcp_check_am.py  dcp_check_atmos.py  dcp_check_base.py  dcp_check_cpl.py  dcp_check_execution.py  dcp_check_global.py  dcp_check_isdcf_dcnc.py  dcp_check_picture.py  dcp_check_pkl.py  dcp_check_report.py  dcp_check_sign.py  dcp_check_sound.py  dcp_check_subtitle.py  dcp_check_utils.py  dcp_check_vol.py  dcp_parse.py  dcp_utils.py  dsm.py  exception.py  info.py  logger.py  profile.py  report.py  sequence.py  sequence_check.py  settings.py
clairmeta/ext/note_1_validator_main/: LICENSE  README.txt  validate.py
clairmeta/utils/: crypto.py  file.py  isdcf.py  probe.py  sys.py  time.py  uuid.py  xml.py
clairmeta/xsd/: DCDMSubtitle-2007.xsd  DCDMSubtitle-2010.xsd  DCDMSubtitle-2014.xsd  DCSubtitle.v1.mattsson.xsd  DCSubtitle.xsd  PROTO-ASDCP-CC_CPL_20070926.xsd  PROTO-ASDCP-CPL-20040511.xsd  SMPTE-429-16-2014-CPL-Metadata.xsd  SMPTE-430-1-2006-KDM.xsd  SMPTE-430-3-2006-ETM.xsd  catalog.xml
old-travis/: Dockerfile-asdcplib-focal  Dockerfile-build-focal  Dockerfile-install-artful  Dockerfile-install-xenial  Dockerfile-test-focal  bintray.sh  build_deb.sh  build_env.sh  stdeb-python2.cfg  test_env.sh
old-travis/debian-asdcplib/: changelog  control
scripts/: dcp_copy.py
tests/: README.rst  __init__.py  test_cli.py  test_dcp_check.py  test_dcp_parse.py  test_dcp_xml_parse.py  test_doctest.py  test_license.py  test_mxf_probe.py  test_profile.py  test_sequence.py  test_xml_utils.py
tests/resources/: ECL-SINGLE-CPL_TST_S_EN-XX_UK-U_51-ATMOS_2K_DI_20160622_ECL_SMPTE_OV.json  ECL-SINGLE-CPL_TST_S_EN-XX_UK-U_51-ATMOS_2K_DI_20160622_ECL_SMPTE_OV.xml  myprofile.json
