[tool.poetry]
name = "clairmeta"
version = "1.5.2"
description = "ClairMeta is a python package for Digital Cinema Package (DCP) probing and checking."
authors = ["Rémi Achard <remiachard@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^5.1.0"
dicttoxml = "^1.7.16"
xmltodict = "^0.13.0"
python-dateutil = "^2.8.2"
six = "^1.16.0"
pyopenssl = "^24.0.0"
pycountry = "^23.12.11"
shutilwhich = "^1.1.0"
cryptography = "^42.0.2"
freetype-py = "^2.4.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"
pytest = "^8.0.0"
ruff = "^0.1.15"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
