[project]
name = "clairmeta"
version = "1.5.2"
description = "ClairMeta is a python package for Digital Cinema Package (DCP) probing and checking."
authors = ["Rémi Achard <remiachard@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=44.0.0",
    "dicttoxml>=1.7.16",
    "freetype-py>=2.5.1",
    "lxml>=5.3.0",
    "pycountry>=24.6.1",
    "python-dateutil>=2.9.0.post0",
    "shutilwhich>=1.1.0",
    "six>=1.17.0",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "coverage>=7.6.1",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]
